--- a/Exercises/Exercise 1/ECO395M_Exercise1.Rmd
+++ b/Exercises/Exercise 1/ECO395M_Exercise1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ECO 395M Exercise 1"
 author: "Jun-Yuan Chen"
-date: "January 29, 2021"
+date: "February 8, 2021"
 output: md_document
 ---
 
@@ -19,10 +19,10 @@ data3 <- read.table('../data/ABIA.csv',header=TRUE,sep=',')
 data4 <- read.table('../data/sclass.csv',header=TRUE,sep=',')
 ```
 
-# 1) Data Visualization: Gas Prices
+# 1 Data Visualization: Gas Prices
 In this exercise, we will be examining data from 101 gas stations in the Austin area from 2016. Some simple plots will be assembled to determine general trends about the data with human observations.
 
-### A) Theory: Gas stations charge more if they lack direct competition in sight (boxplot).
+## A) Theory: Gas stations charge more if they lack direct competition in sight (boxplot).
 ```{r gas price boxplot for competitors, fig.cap="Figure 1: Comparison of box plots for gas prices at stations with a competitor     nearby and without."}
 ggplot(data = data1) + 
   geom_boxplot(mapping=aes(x=Competitors,y=Price)) + 
@@ -30,7 +30,7 @@ ggplot(data = data1) +
 ```
 From this boxplot, it can be seen that the median and upper quartile of the price are both higher in the gas stations without competitors. Only drawing conclusions based on this plot alone, it would not be unreasonable to state that it appears that gas station without competitors nearby charge higher prices. 
 
-### B) Theory: Gas stations charge more if they lack direct competition in sight (boxplot).
+## B) Theory: Gas stations charge more if they lack direct competition in sight (boxplot).
 ```{r, fig.cap="Scatter plot of the median income in the ZIP code of the gas station against the gas prices."}
 ggplot(data = data1) + 
   geom_point(mapping=aes(x=Income,y=Price)) + 
@@ -38,15 +38,15 @@ ggplot(data = data1) +
 ```
 From this scatter plot, there does seem to be positive, albeit weak, relation between the income and price when examining just by eye.
 
-### C) Theory: Shell charges more than other brands (bar plot).
-```{r, fig.cap="Figure 2: Bar plot of the average prices for each brand."}
+## C) Theory: Shell charges more than other brands (bar plot).
+```{r message=FALSE, fig.cap="Figure 2: Bar plot of the average prices for each brand."}
 ggplot(data = data1) +
   geom_bar(mapping = aes(x=Brand,y=Price),stat='summary') +
   labs(title='Average Price of Each Competitor',y='Price (USD)')
 ```
 The average price of each competitors appears to be roughly the same between all the different brands by examination of the plot; so, we conclude (quite skeptically) that Shell does not charge more than the other brands. 
 
-### D) Theory: Gas stations at stoplights charge more (faceted histogram).
+## D) Theory: Gas stations at stoplights charge more (faceted histogram).
 ```{r,fig.cap='Figure 3: Histogram of the gas station prices at gas station with and without stoplights nearby'}
 ggplot(data = data1) + 
   geom_histogram(mapping=aes(x=Price,y=stat(count)/sum(stat(count))),binwidth = 0.05) +
@@ -55,7 +55,7 @@ ggplot(data = data1) +
 ```
 From examination of the two histogram plots, it can be seen that there is a larger density of gas stations with a higher price near a stoplight. 
 
-### E) Theory: Gas stations with direct highway access charge more.
+## E) Theory: Gas stations with direct highway access charge more.
 ```{r,fig.cap='Figure 4: Boxplots of the gas station prices at gas station with and without highway exits nearby'}
 ggplot(data = data1) +
   geom_boxplot(mapping=aes(x=Highway,y=Price)) +
@@ -63,10 +63,10 @@ ggplot(data = data1) +
 ```
 After examining both boxplots, the conclusion can be drawn that the gas stations near highway exits have higher prices.
 
-# 2) Data Visualization: a bike share network
+# 2 Data Visualization: a bike share network
 Similar to the last exercise, we will again employ data visualization to draw conclusions about the trends of a data set. The data set of concern for this exercise is from a bike-sharing rental system; it has been aggregated on daily and hourly basis then combined with weather information. 
 
-### Plot A:
+## Plot A:
 ```{r,fig.cap='Figure 5: Bike rental over hour of the day'}
 data2_avg <- data2 %>% 
               group_by(hr) %>%
@@ -77,8 +77,8 @@ ggplot(data = data2_avg) +
 ```
 From examination of this plot, it can be seen that ridership spikes at around hour 8 and hour 17.
 
-### Plot B:
-```{r,fig.cap='Figure 6: Bike rental over hour of the day for working and non-working days'}
+## Plot B:
+```{r message=FALSE,fig.cap='Figure 6: Bike rental over hour of the day for working and non-working days'}
 data2_avg_wkday <- data2 %>%
                     group_by(hr,workingday) %>%
                     summarize(avg = mean(total))
@@ -89,8 +89,8 @@ ggplot(data = data2_avg_wkday) +
 ```
 With this plot, allowing comparison of working and non-working day bike rental over the day, we can see that bike rentals over not working days is more smooth as it rises in the morning, peaks in the afternoon then declines back down in the evening. However, in contrast, during working days there are two distinct spikes which seem to be in the morning and even which align with typical working hours. 
 
-### Plot C:
-```{r,fig.cap='Figure 7: Plot of average ridership during the 8AM hour by weather situation code for working and non-working days. weathersit: (1 = Clear, Few clouds, Partly cloudy, Partly cloudy),(2 = Mist + Cloudy, Mist + Broken clouds, Mist + Few clouds, Mist),(3 = Light Snow, Light Rain + Thunderstorm + Scattered clouds, Light Rain + Scattered cloud),(4 = Heavy Rain + Ice Pallets + Thunderstorm + Mist, Snow + Fog)'}
+## Plot C:
+```{r message=FALSE,fig.cap='Figure 7: Plot of average ridership during the 8AM hour by weather situation code for working and non-working days. weathersit: (1 = Clear, Few clouds, Partly cloudy, Partly cloudy),(2 = Mist + Cloudy, Mist + Broken clouds, Mist + Few clouds, Mist),(3 = Light Snow, Light Rain + Thunderstorm + Scattered clouds, Light Rain + Scattered cloud),(4 = Heavy Rain + Ice Pallets + Thunderstorm + Mist, Snow + Fog)'}
 data2_avg_wkday_8am <- data2 %>%
                         filter(hr==8) %>%
                         group_by(weathersit,workingday) %>%
@@ -102,10 +102,10 @@ ggplot(data = data2_avg_wkday_8am) +
 ```
 This plot shows that the average rentals at 8 AM are higher on non-working days and theres a somewhat downward trend as weather situation codes increases which signifies increasingly worse weather. 
 
-# 3) Data Visualiszation: Flights at ABIA
+# 3 Data Visualiszation: Flights at ABIA
 Like before, in this exercise data visualization will be the at the forefront; we use a heat map to determine generally when may be good to fly to avoid delays using data on every commercial flight in 2008 that went through Austin-Bergstrom Internation Airport. 
 
-```{r,fig.cap = 'Figure 8: Heat map of the the mean delay time for a given day in a month using data of only displays delays (no early departures).'}
+```{r message=FALSE,fig.cap = 'Figure 8: Heat map of the the mean delay time for a given day in a month using data of only displays delays (no early departures).'}
 #convert to minutes(hhmm to # of minutes)
 convert <- function(x){
   return(trunc(x/100)*60+x-trunc(x/100)*100)
@@ -113,7 +113,7 @@ convert <- function(x){
 
 #data processing
 data3_post <- data3 %>% 
-                mutate(delay = convert(DepTime)-convert(CRSDepTime),ldelay = log(convert(DepTime)-convert(CRSDepTime)),DepTime_hr = convert(DepTime)/60) %>% 
+                mutate(delay = convert(DepTime)-convert(CRSDepTime),DepTime_hr = convert(DepTime)/60) %>% 
                 filter(delay > 0) %>%
                 group_by(DayofMonth,Month) %>%
                 summarise(DepTime_hr=DepTime_hr,mean_delay=mean(delay))
@@ -126,10 +126,10 @@ ggplot(data=data3_post) +
 ```
 From this plot, we can see that for the most part delays are fairly uniform. However, there seems to be less delays towards the end of the year and beginning of the month. 
 
-# 4) K-Nearest Neighbors
+# 4 K-Nearest Neighbors
 The data set of interest is information on over 29,000 Mercedes S Class vehicles (which have a great deal of subclassses). Specifically, we are interested in modeling the predictive capabilities to predict the sales price using K-nearest neighbors given mileage. We will focus on the trim level sub-model categories 350 and 65 AMG, subsetting the data for each, in order to eliminate specifics of each model that may affect price if we were to aggregate them. 
 
-### Part 1: Split the data into training and testing set
+## Part 1: Split the data into training and testing set
 We begin by building two subsets of our original data; one for trim level 350 and one for 65 AMG. Then each of these subsets are split into a training set (in-sample) and testing set (out-sample). As the names suggest, the training set will be use to train the predictive model, while the testing set will be used to test predictive capabilities. The training set will be roughly 80% of the initial subset and the remaining ~20% will be the testing set. 
 ```{r}
 #split the data into the different trims
@@ -149,7 +149,7 @@ data4_trim65_train <- data4_trim65[sample_trim65, ]
 data4_trim65_test  <- data4_trim65[-sample_trim65, ]
 ```
 
-### Part 2: Run K-nearest neighbors
+## Part 2: Run K-nearest neighbors
 Here the K-nearest neighbor (K-nn) algorithm is written for use. The way it is written here will take a new (testing) set to output the predictions using the training set. However, while it is written to take in a vector of new points and returns a vector of predictions, the function itself is not written with vector operations. Rather, it takes each point individually to perform the prediction. 
 ```{r}
 #k-nn function
@@ -175,7 +175,7 @@ knn <- function(data,k,x_new,x,y){
 }
 ```
 
-### Part 3: 
+## Part 3: 
 Now we run the K-nn function while varying the K parameter from 2 to 100. While going out to 100 is likely unnecessary, we do so to be able to comfortable in our determination of the K which yields the lowest RMSE. As can be seen from the plots below, both RMSE trends down into a dip then gradually increases again.
 ```{r}
 #out-of-sample rmse
@@ -195,7 +195,7 @@ for(i in 1:length(k_values)){
 }
 ```
 
-### Out-of-Sample RMSE Plots
+## Out-of-Sample RMSE Plots
 ```{r,fig.caption='Figure 9: Out-of-Sample RMSE Plots for K-NN on mileage vs price.'}
 ggplot(data = data.frame(k_values,rmse_kdata=c(rmse_kdata_trim350,rmse_kdata_trim65),trim350or65AMG=c(rep(350,length(rmse_kdata_trim350)),rep(65,length(rmse_kdata_trim65))))) +
   geom_point(mapping=aes(x=k_values,y=rmse_kdata)) +
@@ -203,7 +203,7 @@ ggplot(data = data.frame(k_values,rmse_kdata=c(rmse_kdata_trim350,rmse_kdata_tri
   labs(title='Trim 350 Data: RMSE of Out-of-Sample K-NN vs K',x='K',y='RMSE')
 ```
 
-### "Optimal" K Plots
+## "Optimal" K Plots
 The "dip" is where we will determine our "optimal" K for K-nn to be. However, due to the random procedure in procuring the training and testing set this K determination will likely have some variation (which can be address with cross validation). In this case, we simply define "optimal" as the K that produces the lowest RMSE in out-of-sample performance. 
 ```{r,fig.cap='Figure 10: K-NN RMSE Out-of-Sample Perform for trim level 350.'}
 #id lowest K value that produces lowest RMSE
